--- a/frontend/src/scss/components/_main.scss
+++ b/frontend/src/scss/components/_main.scss
@@ -1,3 +1,19 @@
 .main {
-  margin-top: 8rem;
+  margin-top: 7rem;
+
+  &__title,
+  &__text {
+    text-align: center;
+  }
+
+  &__title {
+    font-size: 2.3rem;
+  }
+
+  &__text {
+    font-size: 1.5rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    line-height: .8;
+  }
 }
