--- a/frontend/src/scss/utils/_colors.scss
+++ b/frontend/src/scss/utils/_colors.scss
@@ -1,6 +1,7 @@
 $font-color: #393E46;
 $font-color-two: #1B2430;
 $green-color: #395144;
+$red-color: #DD5353;
 $green-light-color: #6D9886;
 $bg-color: #F2E7D5;
 $bg-color-two: #F7F7F7;
