--- a/frontend/src/scss/components/_article.scss
+++ b/frontend/src/scss/components/_article.scss
@@ -37,7 +37,8 @@
     box-shadow: 0 4px 20px rgba(0,0,0,.1);
 
     &-title,
-    &-description {
+    &-description,
+    &-timestamp {
       text-align: left;
     }
 
@@ -48,7 +49,13 @@
     }
 
     &-description {
-      font-size: 1.3rem;
+      font-size: 1.35rem;
+    }
+
+    &-timestamp {
+      margin-top: 1rem;
+      font-size: 1.25rem;
+      font-weight: 700;
     }
 
     &-btns {
