Added responsive design, project completed

--- a/frontend/src/scss/styles.scss
+++ b/frontend/src/scss/styles.scss
@@ -4,3 +4,5 @@
 @forward './components/header';
 @forward './components/main';
 @forward './components/article';
+// RESPONSIVE DESIGN
+@forward './components/responsive_design'
