--- a/frontend/src/scss/components/_article.scss
+++ b/frontend/src/scss/components/_article.scss
@@ -97,25 +97,27 @@
   justify-content: space-around;
   align-items: center;
   position: fixed;
-  bottom: 0;
-  left: 0;
+  bottom: 2rem;
+  left: 10%;
   background-color: c.$bg-color-two;
-  width: 100%;
-  border-top-left-radius: 3rem;
-  border-top-right-radius: 3rem;
+  width: 80%;
   box-shadow: 0 4px 20px rgba(0,0,0,.1);
-  height: 5rem;
+  height: 4rem;
+  border-radius: 3rem;
 
   &__left,
   &__right {
-    width: 3rem;
-    height: 3rem;
+    width: 2.8rem;
+    height: 2.8rem;
     border-radius: 50%;
     box-shadow: 0 4px 20px rgba(0,0,0,.2);
     background-color: c.$green-light-color;
     cursor: pointer;
     border: none;
     outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     &-icon {
       font-size: 2rem;
